fix spacing for new font

--- a/guides/css/main.scss
+++ b/guides/css/main.scss
@@ -92,8 +92,12 @@ pre {
   overflow-x: scroll;
 }
 
-p, li, pre {
+p, li {
   line-height: 1.3rem;
+}
+
+pre {
+  line-height: 1.4rem;
 }
 
 p, ul {
